tests/ui/empty/empty-attributes.stderr
error: unused attribute
  --> $DIR/empty-attributes.rs:2:1
   |
LL | #![allow()]
   | ^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `allow` with an empty list has no effect
note: the lint level is defined here
  --> $DIR/empty-attributes.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/empty-attributes.rs:3:1
   |
LL | #![expect()]
   | ^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `expect` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:4:1
   |
LL | #![warn()]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `warn` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:5:1
   |
LL | #![deny()]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `deny` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:6:1
   |
LL | #![forbid()]
   | ^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `forbid` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:7:1
   |
LL | #![feature()]
   | ^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `feature` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:9:1
   |
LL | #[repr()]
   | ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:12:1
   |
LL | #[target_feature()]
   | ^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: using `target_feature` with an empty list has no effect

error: aborting due to 8 previous errors

